[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/weapons/revolver.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/weapons/shotgun.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/weapons/rifle.tscn" type="PackedScene" id=4]
[ext_resource path="res://textures/hit_marker.png" type="Texture" id=5]
[ext_resource path="res://textures/multibar_2.png" type="Texture" id=6]
[ext_resource path="res://textures/damage_indicator.png" type="Texture" id=7]
[ext_resource path="res://textures/multibar_1.png" type="Texture" id=8]
[ext_resource path="res://default_font.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://textures/multibar_3.png" type="Texture" id=10]
[ext_resource path="res://scenes/card_choice.gd" type="Script" id=11]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 9 )

[node name="player" type="KinematicBody" groups=["friend"]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.5, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
current = true
fov = 80.0
near = 0.01
far = 300.0

[node name="default_position" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.387342, -0.217273, -0.510463 )

[node name="grab_position" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.603378, -0.217273, -0.0447289 )

[node name="slide_position" type="Spatial" parent="Camera"]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0.387342, -0.217273, -0.510463 )

[node name="zoom_position" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.157 )

[node name="revolver" parent="Camera" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.387342, -0.217273, -0.510463 )

[node name="shotgun" parent="Camera" instance=ExtResource( 3 )]
visible = false

[node name="rifle" parent="Camera" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
visible = false

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
enabled = true
cast_to = Vector3( 0, -0.2, 0 )

[node name="crosshair" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hit_marker" type="Sprite" parent="crosshair/Control"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="debug_info" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats" type="RichTextLabel" parent="debug_info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 400.326
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mouse_sens" type="HSlider" parent="debug_info"]
margin_left = 162.0
margin_right = 336.0
margin_bottom = 16.0
min_value = 0.05
max_value = 2.0
step = 0.025
value = 0.1
tick_count = 30
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sensitivity" type="Label" parent="debug_info"]
margin_right = 66.0
margin_bottom = 14.0
text = "чувствительность мыши"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="Label" parent="debug_info"]
margin_top = 35.0
margin_right = 238.0
margin_bottom = 235.0
text = "H - показать/скрыть эту информацию
LMB - стрельба
SPACE - прыжок
R - Перезарядка
W - бег по стенам
ESC - меню/выйти из игры
F11 - полный экран
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="doublejump_progress" type="TextureProgress" parent="GUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
step = 0.01
value = 0.5
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 6
tint_under = Color( 0.6, 0.6, 0.6, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/doublejump_progress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
text = "прыжок"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="TextureProgress" parent="GUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -125.0
margin_top = -55.3619
margin_right = 125.0
margin_bottom = -25.3619
grow_horizontal = 2
grow_vertical = 0
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 8 )
fill_mode = 6
tint_under = Color( 0.42, 0.21, 0.21, 1 )
tint_progress = Color( 0.823529, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp_label" type="Label" parent="GUI/HP"]
anchor_left = 0.45
anchor_right = 0.45
margin_top = -34.7761
margin_bottom = 37.2239
grow_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp_label2" type="Label" parent="GUI/HP"]
margin_top = -16.3975
text = "hp"

[node name="ammo_label" type="Label" parent="GUI/HP"]
anchor_left = 0.55
anchor_right = 0.55
margin_top = -34.7761
margin_bottom = 37.2239
custom_fonts/font = SubResource( 2 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammo_label2" type="Label" parent="GUI/HP"]
anchor_left = 1.0
anchor_right = 1.0
margin_top = -16.0
grow_horizontal = 0
text = "ammo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP2" type="TextureProgress" parent="GUI"]
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
value = 100.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 10 )
fill_mode = 6
tint_under = Color( 0.42, 0.21, 0.21, 1 )
tint_progress = Color( 0.823529, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="GUI/HP2"]
anchor_left = 0.45
anchor_right = 0.45
margin_left = -44.5
margin_top = -10.0
margin_right = 0.5
margin_bottom = 62.4648
grow_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_label" type="Label" parent="GUI/HP2"]
margin_top = 10.0
text = "очки"

[node name="enemy_score" type="Label" parent="GUI/HP2"]
anchor_left = 0.55
anchor_right = 0.55
margin_top = -10.0
custom_fonts/font = SubResource( 2 )
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_score_label" type="Label" parent="GUI/HP2"]
anchor_left = 1.0
anchor_right = 1.0
margin_top = 10.0
grow_horizontal = 0
text = "очки
врага"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage_indicator" type="TextureRect" parent="GUI"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_indicator" type="ColorRect" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.47451, 0.580392, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notification" type="ColorRect" parent="GUI"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.3
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/notification"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "NIGHT-GLIDER picked \"fury\""
align = 1
valign = 1

[node name="timer" type="Timer" parent="GUI/notification"]
one_shot = true

[node name="quit_game" type="Button" parent="GUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
grow_horizontal = 2
text = "Выйти из игры"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.14902, 0.172549, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multiplayer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ip" type="LineEdit" parent="multiplayer"]
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 0.5
margin_left = 10.0
margin_bottom = 24.0
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connect" type="Button" parent="multiplayer"]
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 0.5
margin_left = 10.0
margin_top = 33.713
margin_bottom = 58.713
text = "подключиться"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="multiplayer"]
anchor_left = 0.4
anchor_top = 0.15
anchor_right = 0.6
anchor_bottom = 0.2
grow_vertical = 0
color = Color( 0.12549, 1, 0, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nickname" type="LineEdit" parent="multiplayer"]
anchor_left = 0.4
anchor_top = 0.1
anchor_right = 0.6
anchor_bottom = 0.15
text = "ПУСТОЙ_НИК"
align = 1
max_length = 20
placeholder_text = "nickname"
caret_blink = true
caret_blink_speed = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_settings" type="GridContainer" parent="multiplayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -10.0
grow_horizontal = 0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="multiplayer/server_settings"]
margin_top = 5.0
margin_right = 112.0
margin_bottom = 20.0
text = "Кол-во раундов: "

[node name="rounds_count" type="SpinBox" parent="multiplayer/server_settings"]
margin_left = 116.0
margin_right = 190.0
margin_bottom = 25.0
min_value = 1.0
max_value = 20.0
value = 10.0
align = 1
editable = false

[node name="Label2" type="Label" parent="multiplayer/server_settings"]
margin_top = 32.0
margin_right = 112.0
margin_bottom = 47.0
text = "Карта:"

[node name="change_map" type="MenuButton" parent="multiplayer/server_settings"]
margin_left = 116.0
margin_top = 29.0
margin_right = 190.0
margin_bottom = 50.0
text = "карта"
flat = false
items = [ "classic", null, 0, false, false, 0, 0, null, "", false, "neocity", null, 0, false, false, 1, 0, null, "", false, "concrete bamboo", null, 0, false, false, 2, 0, null, "", false, "hexbowl", null, 0, false, false, 3, 0, null, "", false, "float debris", null, 0, false, false, 4, 0, null, "", false, "dellusion", null, 0, false, false, 5, 0, null, "", false ]

[node name="create" type="Button" parent="multiplayer/server_settings"]
margin_top = 54.0
margin_right = 112.0
margin_bottom = 75.0
text = "Создать сервер"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="card_choice" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="card1" type="Control" parent="card_choice"]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -100.0
margin_right = 50.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="card_choice/card1"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2

[node name="RichTextLabel" type="RichTextLabel" parent="card_choice/card1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
mouse_default_cursor_shape = 2
bbcode_enabled = true
bbcode_text = "[center]TEST_NAME[/center]
[color=green]+1 omegalul[/color]
[color=red]-1 IQ[/color]"
text = "TEST_NAME
+1 omegalul
-1 IQ"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="card2" type="Control" parent="card_choice"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -100.0
margin_right = 50.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="card_choice/card2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2

[node name="RichTextLabel" type="RichTextLabel" parent="card_choice/card2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]TEST_NAME[/center]
[color=green]+1 omegalul[/color]
[color=red]-1 IQ[/color]"
text = "TEST_NAME
+1 omegalul
-1 IQ"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="card3" type="Control" parent="card_choice"]
anchor_left = 0.8
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -100.0
margin_right = 50.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="card_choice/card3"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="card_choice/card3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[center]TEST_NAME[/center]
[color=green]+1 omegalul[/color]
[color=red]-1 IQ[/color]"
text = "TEST_NAME
+1 omegalul
-1 IQ"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="card_choice"]
one_shot = true

[node name="change_weapon" type="MenuButton" parent="."]
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.4
margin_top = 10.0
margin_bottom = 31.0
text = "Оружие"
flat = false
items = [ "Revolver", null, 0, false, false, 0, 0, null, "", false, "Shotgun", null, 0, false, false, 1, 0, null, "", false, "Rifle", null, 0, false, false, 2, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="GUI/notification/timer" to="." method="_on_notification_timer_timeout"]
[connection signal="pressed" from="GUI/quit_game" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="multiplayer/connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="multiplayer/server_settings/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="card_choice/card1/Button" to="card_choice" method="_on_card1_pressed"]
[connection signal="pressed" from="card_choice/card2/Button" to="card_choice" method="_on_card2_pressed"]
[connection signal="pressed" from="card_choice/card3/Button" to="card_choice" method="_on_card3_pressed"]
[connection signal="timeout" from="card_choice/Timer" to="card_choice" method="_on_Timer_timeout"]
